--- a/scss/object/component/_table.scss
+++ b/scss/object/component/_table.scss
@@ -3,7 +3,7 @@
 .c-table {
   &__info {
     margin: 0 auto 10px;
-    color: white;
+    color: rgb(0, 0, 0);
     font-size: 1.6rem;
     border-top: 1px solid rgba(255, 255, 255, 0.5);
     border-bottom: 1px solid rgba(255, 255, 255, 0.5);
