--- a/scss/object/project/_mainvisual.scss
+++ b/scss/object/project/_mainvisual.scss
@@ -1,5 +1,11 @@
 @use "./../../foundation/mixin" as *;
 
 .p-mainvisual {
-  height: 450px;
+ 
+  height: 200px;
+  margin-top: 20px;
+  @include breakpoint(tablet) {
+ 
+  height: 800px;
+  }
 }
