--- a/scss/style.scss
+++ b/scss/style.scss
@@ -40,6 +40,7 @@
 @use "./object/component/name";
 @use "./object/component/price";
 @use "./object/component/subtitle";
+@use "./object/component/wrapper";
 // -----------------------------------------------------------------
 // Project
 // -----------------------------------------------------------------
@@ -53,7 +54,8 @@
 @use "./object/project/serviceflow";
 
 
-// // -----------------------------------------------------------------
-// // Utility
+// -----------------------------------------------------------------
+// Utility
 // ---------------------------------
-// //
+
+@use "./object/utility/span";
