--- a/scss/object/component/_flex.scss
+++ b/scss/object/component/_flex.scss
@@ -2,15 +2,19 @@
 
 .c-flex {
     display: flex;
+    align-items: center;
+    padding: 0 0 25px 15px;
+    
     &__header {
         @include breakpoint(tablet) {
             display: flex;
 
         }
     }
-    
+
     &__menuset {
         display: flex;
+        justify-content: space-between;
     }
 
     &__reserve {
