--- a/scss/object/component/_table.scss
+++ b/scss/object/component/_table.scss
@@ -1,12 +1,12 @@
 @use "./../../foundation/mixin" as *;
 
 .c-table {
-  &__info {
-    margin: 0 auto 10px;
+  &__infoday {
+    margin: 0 auto;
     color: rgb(0, 0, 0);
-    font-size: 1.6rem;
-    border-top: 1px solid rgba(255, 255, 255, 0.5);
-    border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+    font-size: 1.5rem;
+    border-top: 1px solid #807c7c;
+    border-bottom: 1px solid #807c7c;
     @include breakpoint(tablet) {
       font-size: 2.4rem;
     }
@@ -14,14 +14,17 @@
     & > td:first-child {
       line-height: 1.4;
     }
-    & > tbody > tr:first-of-type > td {
-      border-bottom: 1px dotted rgba(255, 255, 255, 0.5);
-    }
     & > tbody > tr > td {
-      padding: 15px 10px;
+      padding: 10px 10px;
       @include breakpoint(tablet) {
         padding: 30px;
       }
     }
   }
+   
+    &__td {
+      border-bottom: 1px solid #807c7c;
+    }
+    
+  
 }
