--- a/scss/foundation/_base.scss
+++ b/scss/foundation/_base.scss
@@ -17,7 +17,7 @@ html {
 body {
   color: #333;
   font-size: 1.6rem;
-  font-family: "M PLUS 1p", "Noto Sans JP", sans-serif;
+  font-family: "游ゴシック", "Noto Sans JP", sans-serif;
   min-width: 350px;
   width: 100%;
   overflow-x: hidden;
@@ -55,4 +55,12 @@ a:hover img {
 
 li {
   list-style: none;
+}
+
+h2 {
+  font-size: 3.2rem;
+}
+
+h3 {
+  font-size: 2.4rem;
 }
