--- a/scss/object/component/_card.scss
+++ b/scss/object/component/_card.scss
@@ -1,10 +1,18 @@
 @use "./../../foundation/mixin" as *;
 
-.c-card__img {
-   
-    height: 300px;
+.c-card {
+    &__img{
+  height: 300px;
     @include breakpoint(tablet) {
         width: 761px;
         height: 655px;
+    }
+}
+
+    &__text {
+        margin: 0 10px 0;
+        line-height: 3;
+        letter-spacing: 2px;
+        font-weight: bold;
     }
 }
