--- a/scss/object/component/_table.scss
+++ b/scss/object/component/_table.scss
@@ -10,21 +10,27 @@
     @include breakpoint(tablet) {
       font-size: 2.4rem;
     }
-    & > tr:first-child,
-    & > td:first-child {
-      line-height: 1.4;
-    }
-    & > tbody > tr > td {
-      padding: 10px 10px;
-      @include breakpoint(tablet) {
-        padding: 30px;
-      }
-    }
-  }
-   
-    &__td {
-      border-bottom: 1px solid #807c7c;
+
+    @include breakpoint(pc) {
+    font-size: 4.8rem;
     }
     
+       
+  }
   
+}
+
+.c-table__td {
+  padding: 1.6vh 2.7vw;
+  @include breakpoint(tablet) {
+  padding: 2vh 2.5vw;
+  }
+  @include breakpoint(pc) {
+    padding: 30px;
+  }
+  &-title {
+    @include breakpoint(tablet) {
+    font-size: 2.2rem;
+    }
+  }
 }
