--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -1,8 +1,11 @@
 @use "./../foundation/mixin" as *;
 
 .l-footer {
-    background-color: #fff019;
-    position: fixed;
-    width: 100%;
-    bottom: 0;
+  background-color: #fff019;
+  position: fixed;
+  width: 100%;
+  bottom: 0;
+  @include breakpoint(tablet) {
+    display: none;
+  }
 }
