--- a/scss/object/component/_address.scss
+++ b/scss/object/component/_address.scss
@@ -1,43 +1,13 @@
 @use "./../../foundation/mixin" as *;
 
 .c-address {
-  &__dl {
-    padding: 30px;
-    color: white;
-    text-align: center;
-  }
-  &__title {
-    float: left;
-    font-size: 1.2rem;
-    padding-bottom: 10px;
-  }
-  &__text {
-    font-size: 1.2rem;
-    text-align: right;
-    padding-bottom: 10px;
-    & > a {
-      color: white;
-    }
+  @include breakpoint(pc) {
+    padding-left: 25px;
   }
   &__googlemap {
-    width: 100%;
-    height: 100%;
-  }
-  &__inner {
-    background-color: black;
-    text-align: center;
-    padding-bottom: 20px;
-    @include breakpoint(tablet) {
+    @include breakpoint(pc) {
       width: 70%;
-    }
-    & > small {
-      color: white;
-    }
-  }
-  &__div {
-    @include breakpoint(tablet) {
-      width: 100%;
-      height: 500px;
+      height: 50vh;
     }
   }
 }
