--- a/scss/object/component/_button.scss
+++ b/scss/object/component/_button.scss
@@ -1,9 +1,10 @@
 @use "./../../foundation/mixin" as *;
 
 .c-button {
-    &__net,
-    &__tel {
-        width: 100%;
-        border: 2px solid black;
-    }
+  &__net,
+  &__tel {
+    width: 100%;
+    height: 20vh;
+    border: 2px solid black;
+  }
 }
