--- a/scss/object/component/_text.scss
+++ b/scss/object/component/_text.scss
@@ -10,6 +10,9 @@
     letter-spacing: 6px;
     line-height: 2.5;
     margin-top: 10px;
+    @include breakpoint(pc) {
+      margin: 15px 0;
+    }
   }
 
   &__netreserve,
