--- a/scss/object/project/_mainvisual.scss
+++ b/scss/object/project/_mainvisual.scss
@@ -1,12 +1,8 @@
 @use "./../../foundation/mixin" as *;
 
 .p-mainvisual {
- 
-  height: 200px;
-  margin-top: 20px;
-  margin-bottom: 60px;
+  margin: 20px 0 60px 0;
   @include breakpoint(tablet) {
- 
-  height: 800px;
+    margin-top: 0;
   }
 }
