--- a/scss/object/component/_table.scss
+++ b/scss/object/component/_table.scss
@@ -10,27 +10,26 @@
     @include breakpoint(tablet) {
       font-size: 2.4rem;
     }
-
-    @include breakpoint(pc) {
-    font-size: 4.8rem;
-    }
-    
-       
   }
-  
 }
 
 .c-table__td {
   padding: 1.6vh 2.7vw;
   @include breakpoint(tablet) {
-  padding: 2vh 2.5vw;
+    padding: 2vh 2.5vw;
   }
   @include breakpoint(pc) {
     padding: 30px;
   }
   &-title {
     @include breakpoint(tablet) {
-    font-size: 2.2rem;
+      font-size: 2.2rem;
+      padding-right: 60px;
+    }
+  }
+  &-title {
+    @include breakpoint(pc) {
+      font-size: 3.2rem;
     }
   }
 }
